# bazel-bwob-hanging-issue

./: .gitignore  BUILD.bazel  README.md  run.sh  shell.nix
buildbarn/: docker-compose.yml
buildbarn/config/: worker-ubuntu22-04.jsonnet
